plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

apply from: "$rootDir/gradle/versioning.gradle"
apply from: "$rootDir/gradle/docker.gradle"

group = 'ch.so.agi'
def resolvedProjectVersion = version.toString()

sourceSets {
    e2e {
        java.srcDir 'src/e2e/java'
        resources.srcDir 'src/e2e/resources'
        compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
        runtimeClasspath += output + compileClasspath
  }
}

java { 
    toolchain { 
        languageVersion = JavaLanguageVersion.of(21) 
    } 
}

repositories { 
    mavenCentral() 
    maven { url = "https://jars.sogeo.services/mirror" }
}

ext {
    set('springAiVersion', "2.0.0")
}

configurations {
    e2eImplementation.extendsFrom testImplementation
    e2eRuntimeOnly.extendsFrom testRuntimeOnly
}

dependencies {
    implementation "org.springframework.ai:spring-ai-starter-mcp-server"
    implementation "org.springframework.boot:spring-boot-starter"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.jspecify:jspecify:1.0.0"
    implementation "ch.ehi:ehibasics:1.4.1"
    implementation "antlr:antlr:2.7.7"
    implementation "ch.interlis:ili2c-core:5.6.8"
    implementation "ch.interlis:ili2c-tool:5.6.8"
    implementation "ch.interlis:iox-ili:1.24.4"
    implementation "ch.interlis:ilivalidator:1.14.3"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
        
    e2eImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform() {
        excludeTags 'e2e'
    }
}

tasks.named('processResources') {
    inputs.property('mcpServerVersion', resolvedProjectVersion)
    filesMatching('application.properties') {
        expand(mcpServerVersion: resolvedProjectVersion)
    }
}

tasks.withType(Test).configureEach {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
    systemProperty 'expectedProjectVersion', resolvedProjectVersion
}

bootJar { 
    archiveFileName = 'interlis-mcp.jar' 
}

tasks.register('e2eTest', Test) {
    description = 'Runs end-to-end tests.'
    group = 'verification'
    dependsOn tasks.bootJar
    testClassesDirs = sourceSets.e2e.output.classesDirs
    classpath = sourceSets.e2e.runtimeClasspath
    shouldRunAfter tasks.test
    useJUnitPlatform() {
        includeTags 'e2e'
    }
}
